# copy-trader-api

./: .env.example  Cargo.toml  readme.md
src/: db.rs  error.rs  main.rs  models.rs  routes.rs
src/database/: rls_policies.sql
